--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "xp-array-behavior",
   "license": "BSD-3-Clause",
   "version": "0.9.6",
+  "main": "xp-array-behavior.html",
   "description": "A behavior used to improve polymer's array mutation API on the context element.",
   "homepage": "http://expandjs.com/elements/xp-array-behavior",
   "authors": [
@@ -14,9 +15,6 @@
     "html5",
     "expandjs",
     "web-components"
-  ],
-  "main": [
-    "xp-array-behavior.html"
   ],
   "ignore": [
     "**/.*"
