--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "xp-array-behavior",
   "license": "BSD-3-Clause",
-  "version": "0.9.11",
+  "version": "0.10.0",
   "main": "xp-array-behavior.html",
-  "description": "A behavior used to improve polymer's array mutation API on the context element.",
+  "description": "A behavior used to improve Polymer's array mutation API.",
   "homepage": "http://expandjs.com/elements/xp-array-behavior",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
@@ -11,16 +11,16 @@
     "Robert Manolea <r.manolea@expandjs.com>"
   ],
   "keywords": [
-    "web app",
-    "html5",
     "expandjs",
+    "web app",
+    "custom elements",
     "web-components"
   ],
   "ignore": [
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs#0.9.11",
-    "polymer": "Polymer/polymer#^1.1.0"
+    "expandjs": "ExpandJS/expandjs#0.10.0",
+    "polymer": "Polymer/polymer#^1.2.0"
   }
 }
